[tool.poetry]
name = "zelda-tutorial"
version = "0.1.0"
description = ""
authors = ["Eivind Teig <eivind.teig@gmail.com>"]
readme = "README.md"
packages = [{include = "zelda_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "2.1.3.dev8"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
